# ROS-based-Differential-Drive

./: README.md  ROS_keyboard_encoder.ino  custom.face.trainer.py  face.py  faces.train.py  torso_iden.py
diff_drive_gazebo/: CMakeLists.txt  ReadMe.md  package.xml
diff_drive_gazebo/launch/: main.launch
diff_drive_gazebo/models/diffdrive/: model.config  model.sdf
ps3_motion/: ps3_motion.ino
ps3_motion_usb/: ps3_motion_usb.ino
ros_ps3_combined/: ros_ps3_combined.ino
